# test-repository-for-dataset-generation

./: README.md  firmware.uf2  rgb_sensor.uf2  rgb_sensor_with_driver.uf2
fruit_classifier_inference/: CMakeLists.txt
fruit_classifier_inference/fruit_classifier/: CMakeLists.txt  config.h  main.cpp  main_functions.cpp  main_functions.h  model_data.h
fruit_classifier_inference/fruit_classifier/rgb_sensor/: Adafruit_TCS34725.cpp  Adafruit_TCS34725.h  TCS34725_utils.cpp  setup.cpp  setup.h
precompiled_binaries/: rgb_sensor_with_driver.uf2
reference_datasets/: apple.csv  banana.csv  orange.csv
rgb_sensor_with_driver/: Adafruit_TCS34725.cpp  Adafruit_TCS34725.h  CMakeLists.txt  TCS34725_utils.h  main.cpp
